--- a/app/views/admin/shared/table/_row.html.erb
+++ b/app/views/admin/shared/table/_row.html.erb
@@ -94,8 +94,8 @@
 
       <% if columns[:enter].present? %>
         <%= link_to columns[:enter_url_method].call(**columns[:enter_url_params]), class: "inline-flex text-gray-700 hover:text-oceanside-500 hover:ring-2 hover:ring-oceanside-500 hover:rounded-3xl px-2 py-2" do %>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline w-6 h-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25" />
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
           </svg>
         <% end %>
       <% end %>
