--- a/app/views/text_blocks/advanced_search.html.erb
+++ b/app/views/text_blocks/advanced_search.html.erb
@@ -21,7 +21,7 @@
           <div class="inline-flex">
             <div class="flex grid grid-flow-row space-y-2 items-center">
               <div class="inline-flex">
-                მხოლოდ ტერმინოლოგია
+                ორიგინალის ენა
               </div>
               <div class="inline-flex">
                 <div class="flex grid grid-flow-col space-x-2 items-center">
