--- a/app/views/admin/text_blocks/shared/table/_row.html.erb
+++ b/app/views/admin/text_blocks/shared/table/_row.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <% if columns[:contents_ka].present? %>
-    <td data-controller="tooltip" data-tooltip-target="cell" data-tooltip-overflow-value="true" class="relative truncate z-0 border-b border-r text-sm scrollbar-hide hover:z-10 max-w-[240px] text-gray-500 px-3">
+    <td data-controller="tooltip" data-tooltip-target="cell" data-tooltip-overflow-value="true" class="relative z-0 border-b border-r text-sm scrollbar-hide hover:z-10 max-w-[240px] text-gray-500 px-3 py-3">
       <span class="highlightable">
         <%= ka_block.present? ? ka_block.contents : '' %>
       </span>
@@ -22,7 +22,7 @@
   <% end %>
 
   <% if columns[:contents_en].present? %>
-    <td data-controller="tooltip" data-tooltip-target="cell" data-tooltip-overflow-value="true" class="relative truncate z-0 border-b border-r text-sm scrollbar-hide hover:z-10 max-w-[240px] text-gray-500 px-3">
+    <td data-controller="tooltip" data-tooltip-target="cell" data-tooltip-overflow-value="true" class="relative z-0 border-b border-r text-sm scrollbar-hide hover:z-10 max-w-[240px] text-gray-500 px-3 py-3">
       <span class="highlightable">
         <%= en_block.present? ? en_block.contents : '' %>
       </span>
