--- a/app/views/shared/_search_results.html.erb
+++ b/app/views/shared/_search_results.html.erb
@@ -4,7 +4,7 @@
       <div class="inline-flex text-gray-400 justify-end w-6">
         <%= index + 1 + text_block_pairs.limit_value * (text_block_pairs.current_page - 1) %>.
       </div>
-      <div class"inline-flex">
+      <div class=inline-flex">
         <div class="flex grid grid-flow-row space-y-5">
           <div data-controller="tooltip" data-tooltip-target="cell" class="inline-flex text-gray-400">
             <%= text_block_pair.collection.group.name_ka %> | <%= text_block_pair.collection.name_ka %>
