--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/heading', name: 'ტექსტური წყვილების რედაქტირება' %>
 
-<main data-controller="scroll-to" data-scroll-to-anchor-value="<%= @anchored_block.present? ? "text-block-#{@anchored_block.id}" : nil %>">
+<main data-controller="scroll-to">
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <% crumbs = [] %>
     <% crumbs << { name: @collection.supergroup.name_ka, url: admin_groups_path(supergroup_id: @collection.supergroup.id) } %>
@@ -107,10 +107,10 @@
     <% @text_blocks.group_by(&:order_number).each do |order_number, block_group| %>
       <div class="mt-3 flex justify-stretch grid grid-cols-2 grid-flow-col max-w-screen-2xl">
         <% ka_block = block_group.detect(&:ka?) %>
-        <%= render partial: 'edit_card', locals: { block: ka_block, language: 'ka', new_id: 'dummy' + SecureRandom.uuid, order_number: } %>
+        <%= render partial: 'edit_card', locals: { block: ka_block, language: 'ka', new_id: 'dummy' + SecureRandom.uuid, selected_block_id: @anchored_block&.id, order_number:} %>
 
         <% en_block = block_group.detect(&:en?) %>
-        <%= render partial: 'edit_card', locals: { block: en_block, language: 'en', new_id: 'dummy' + SecureRandom.uuid, order_number: } %>
+        <%= render partial: 'edit_card', locals: { block: en_block, language: 'en', new_id: 'dummy' + SecureRandom.uuid, selected_block_id: @anchored_block&.id, order_number: } %>
       </div>
     <% end %>
 
