add search button and functionality

--- a/app/views/admin/text_blocks/_edit_card.html.erb
+++ b/app/views/admin/text_blocks/_edit_card.html.erb
@@ -7,7 +7,7 @@
         <div class="mb-2 flex justify-between grid grid-flow-col w-full">
           <div class="flex items-center">
             <div class="grid justify-items-start">
-              <div class="inline-flex">
+              <div class="inline-flex" id="<%= "#{language.upcase}-#{order_number}" %>">
                 <%= "#{language.upcase}-#{order_number}" %>
               </div>
             </div>
