fix sticky result bar

--- a/app/views/text_blocks/advanced_search.html.erb
+++ b/app/views/text_blocks/advanced_search.html.erb
@@ -279,7 +279,7 @@
         </div>
       <% end %>
     </div>
-    <div id="total-count-div" class="sticky z-20 top-40 py-4 inline-flex text-gray-400 text-sm items-center bg-gray-100" style="grid-column: 2;">
+    <div id="total-count-div" class="top-40 py-4 inline-flex text-gray-400 text-sm items-center bg-gray-100" style="grid-column: 2;">
       <%= @text_block_pairs.total_count %> შედეგი
     </div>
     <div id="search-result-div" class="flex" style="grid-column-start: 2; grid-column-end: 3; grid-row: 2;">
